Add Tribe Life sigil: tribal replacement on death + update documentation

--- a/1.0/BackToBeastSigils.csproj
+++ b/1.0/BackToBeastSigils.csproj
@@ -48,6 +48,9 @@
     <None Include="strange_evolution.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="tribe_life.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
